# evm-from-scratch

./: Cargo.toml  README.md  difficult_tests.json  tests.json
src/: main.rs
src/evm/: evm.rs  mod.rs
src/evm/opcodes/: block.rs  comparison_and_bitwise.rs  duplication.rs  environmental.rs  exchange.rs  logging.rs  mod.rs  push.rs  sha_3.rs  stack_memory_storage_flow.rs  stop_and_arithmetic.rs  system.rs
src/evm/utils/: constants.rs  errors.rs  helpers.rs  mod.rs  test_types.rs  traits.rs  types.rs
