[package]
name = "evm_from_scratch_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
primitive-types = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha3  = "0.10.7"
